Time: 2 ms (75.85%), Space: 43.4 MB (20.00%) - LeetHub