@@ -1,49 +1,30 @@
 class Solution {
 
-    public List<List<Integer>> permuteUnique(int[] nums) {
-        List<List<Integer>> results = new ArrayList<>();
-
-        // count the occurrence of each number
-        HashMap<Integer, Integer> counter = new HashMap<>();
-        for (int num : nums) {
-            if (!counter.containsKey(num))
-                counter.put(num, 0);
-            counter.put(num, counter.get(num) + 1);
-        }
-
-        LinkedList<Integer> comb = new LinkedList<>();
-        this.backtrack(comb, nums.length, counter, results);
-        return results;
+   public List<List<Integer>> permuteUnique(int[] nums) {
+        if (nums == null || nums.length == 0)
+            return new ArrayList<>();
+        Arrays.sort(nums);
+        List<List<Integer>> finalResult = new ArrayList<>();
+        permuteUniqueRecur(nums, finalResult, new ArrayList<>(), new boolean[nums.length]);
+        return finalResult;
     }
 
-    protected void backtrack(
-            LinkedList<Integer> comb,
-            Integer N,
-            HashMap<Integer, Integer> counter,
-            List<List<Integer>> results) {
+    private void permuteUniqueRecur(int[] nums, List<List<Integer>> finalResult, List<Integer> currResult, boolean[] used) {
 
-        if (comb.size() == N) {
-            // make a deep copy of the resulting permutation,
-            // since the permutation would be backtracked later.
-            results.add(new ArrayList<Integer>(comb));
+        if (currResult.size() == nums.length) {
+            finalResult.add(new ArrayList<>(currResult));
             return;
         }
 
-        for (Map.Entry<Integer, Integer> entry : counter.entrySet()) {
-            Integer num = entry.getKey();
-            Integer count = entry.getValue();
-            if (count == 0)
+        for (int i = 0; i < nums.length; i++) {
+            if (used[i] || (i > 0 && !used[i - 1] && nums[i] == nums[i - 1])) {
                 continue;
-            // add this number into the current combination
-            comb.addLast(num);
-            counter.put(num, count - 1);
-
-            // continue the exploration
-            backtrack(comb, N, counter, results);
-
-            // revert the choice for the next exploration
-            comb.removeLast();
-            counter.put(num, count);
+            }
+            currResult.add(nums[i]);
+            used[i] = true;
+            permuteUniqueRecur(nums, finalResult, currResult, used);
+            used[i] = false;
+            currResult.remove(currResult.size() - 1);
         }
     }
 }
